# Dropseed

./: .gitignore  Cargo.toml  DESIGN_DOC.md  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: test.yml
core/: Cargo.toml
core/src/: lib.rs  rt_garbage_collector.rs
core/src/pcm/: mod.rs
core/src/plugin/: buffer.rs  event.rs  host_info.rs  host_request.rs  host_request_channel.rs  instance_id.rs  mod.rs  process_info.rs  save_state.rs
core/src/plugin/ext/: audio_ports.rs  mod.rs  params.rs
core/src/transport/: declick.rs  mod.rs  tempo_map.rs
dropseed_core/: Cargo.toml
dropseed_core/src/: garbage_collector.rs  lib.rs
dropseed_daw_nodes/: Cargo.toml
dropseed_graph/: Cargo.toml
dropseed_graph/src/: channel.rs  lib.rs  main_thread.rs  process_thread.rs  settings.rs
dropseed_io/: Cargo.toml
examples/basic-daw-example/: Cargo.toml
examples/basic-daw-example/src/: effect_rack_page.rs  main.rs  noise_gen_plugin.rs  scanned_plugins_page.rs
examples/host-example/: Cargo.toml
examples/simple-daw-example/: Cargo.toml
examples/simple-daw-example/src/: effect_rack_page.rs  main.rs  scanned_plugins_page.rs
examples/test-host/: Cargo.toml  README.md
examples/test-host/src/: effect_rack_page.rs  main.rs  scanned_plugins_page.rs
graph/: Cargo.toml
graph/src/: audio_thread.rs  channel.rs  lib.rs  main_thread.rs  settings.rs
graph/src/node/: audio_port.rs  audio_port_buffer.rs  descriptor.rs  features.rs  id.rs  mod.rs  node_host_audio_thread.rs  node_host_main_thread.rs  node_request.rs  note_name.rs  note_port.rs  process_data.rs  render.rs
host/: Cargo.toml
host/src/: audio_thread.rs  lib.rs  main_thread.rs
plugin-api/: Cargo.toml
plugin-api/src/: automation.rs  buffer.rs  host_info.rs  host_request_channel.rs  instance_id.rs  lib.rs  main_thread.rs  param_helper.rs  plugin_scanner.rs  process_info.rs  process_thread.rs  processor.rs  save_state.rs
plugin-api/src/ext/: audio_ports.rs  mod.rs
plugin-api/src/param_helper/: declick.rs  smooth.rs
plugin-api/src/transport/: declick.rs  mod.rs  tempo_map.rs
plugins/: Cargo.toml
plugins/sample-browser-plug/: Cargo.toml
plugins/sample-browser-plug/src/: lib.rs
plugins/src/: lib.rs  sample_browser.rs  test_sine.rs
resource-loader/: Cargo.toml
resource-loader/src/: lib.rs
resource-loader/src/pcm/: convert.rs  decode.rs  loader.rs  mod.rs  ram.rs
src/: audio_buffer.rs  audio_ports.rs  audio_thread.rs  c_char_helpers.rs  channel_map.rs  clap_plugin_host.rs  engine.rs  engine_handle.rs  error.rs  event.rs  fixed_point.rs  garbage_collector.rs  graph.rs  host.rs  host_request.rs  lib.rs  plugin_scanner.rs  process.rs  processor_schedule.rs  reducing_queue.rs  schedule.rs  thread_id.rs  transport.rs  transport_handle.rs
src/clap/: c_char_helpers.rs  events.rs  factory.rs  host.rs  host_request.rs  mod.rs  params.rs  plugin.rs  process.rs  stream.rs  task.rs
src/clap/host/: extensions.rs
src/engine/: audio_thread.rs  error.rs  handle.rs  main_thread.rs  mod.rs  plugin_scanner.rs  process_thread.rs  request.rs  settings.rs  tempo_map.rs  timer.rs  timer_wheel.rs
src/engine/events/: from_engine.rs  mod.rs  to_engine.rs
src/engine/sandboxed/: main_thread.rs  mod.rs  plugin_scanner.rs  process_thread.rs
src/graph/: audio_buffer_pool.rs  buffers.rs  compiler.rs  error.rs  mod.rs  plugin_host.rs  plugin_pool.rs  save_state.rs  shared_pool.rs  verifier.rs
src/graph/buffers/: events.rs  plugin.rs  pool.rs  sanitization.rs
src/graph/compiler/: delay_comp_task.rs  graph_in_out_task.rs  plugin_task.rs  sum_task.rs  verifier.rs
src/graph/compiler/plugin_task/: activated_plugin_task.rs  deactivated_plugin_task.rs  loaded_plugin_task.rs  unloaded_plugin_task.rs
src/graph/plugin/: audio_buffer.rs  host_request.rs  mod.rs  process_info.rs  save_state.rs
src/graph/plugin/events/: event_queue.rs  mod.rs
src/graph/plugin/ext/: audio_ports.rs  note_ports.rs  params.rs
src/graph/plugin_host/: audio_thread.rs  mod.rs
src/graph/schedule/: delay_comp_node.rs  mod.rs  sum.rs  task.rs
src/graph/schedule/transport_task/: declick.rs  mod.rs
src/graph/shared_pools/: buffer_pool.rs  delay_comp_node_pool.rs  mod.rs  plugin_host_pool.rs  shared_schedule.rs  transport_pool.rs
src/plugin/: audio_buffer.rs  event_queue.rs  events.rs  host_request.rs  mod.rs  process_info.rs  save_state.rs
src/plugin/events/: event_queue.rs  mod.rs
src/plugin/ext/: audio_ports.rs  mod.rs  note_ports.rs  params.rs
src/plugin_host/: channel.rs  error.rs  event_io_buffers.rs  events.rs  main_thread.rs  mod.rs  process_thread.rs  processor.rs
src/plugin_host/event_io_buffers/: sanitizer.rs
src/plugin_host/events/: event_io_buffers.rs  sanitizer.rs
src/plugin_host/main_thread/: sync_ports.rs
src/plugin_scanner/: missing_plugin.rs
src/plugins/: mod.rs  sample_browser.rs  test_sine.rs
src/process_info/: buffer_layout.rs  mod.rs  proc_audio_buffers.rs
src/processor_schedule/: tasks.rs
src/processor_schedule/tasks/: deactivated_plug_task.rs  delay_comp_task.rs  graph_in_out_task.rs  plugin_task.rs  sum_task.rs  transport_task.rs  unloaded_plugin_task.rs
src/processor_schedule/tasks/delay_comp_task/: audio_delay_comp.rs  automation_delay_comp.rs  mod.rs  note_delay_comp.rs  param_event_delay_comp.rs
src/processor_schedule/tasks/sum_task/: audio_sum_task.rs  automation_sum_task.rs  mod.rs  note_sum_task.rs  param_event_sum_task.rs
src/processor_schedule/tasks/transport_task/: declick.rs
src/resource_loader/: mod.rs
src/resource_loader/pcm/: convert.rs  decode.rs  loader.rs  mod.rs
src/schedule/: mod.rs  plugin_pool.rs  task.rs  tasks.rs
src/schedule/tasks/: deactivated_plug_task.rs  delay_comp_task.rs  plugin_task.rs  transport_task.rs
src/transport/: mod.rs  tempo_map.rs
src/utils/: fixed_point.rs  mod.rs  reducing_queue.rs  thread_id.rs
tests/: clap_host_test.rs  integration_test.rs
