[package]
name = "dropseed"
version = "0.0.0"
edition = "2021"
authors = ["Billy Messenger <BillyDM@tutamail.com>"]
license = "GPL-3.0"
keywords = ["audio", "graph", "daw", "plugin", "host"]
categories = ["multimedia::audio"]
description = "The DAW audio graph engine used in Meadowlark (placeholder)"
documentation = "https://docs.rs/dropseed"
repository = "https://github.com/MeadowlarkDAW/dropseed"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["examples/test-host", "plugin-api"]

[features]
default = ["clap-host", "cpal-backend"]
clap-host = ["walkdir", "dirs"]
cpal-backend = ["cpal"]
cpal-asio = ["cpal/asio"]

[dependencies]
dropseed-plugin-api = { path = "./plugin-api" }
meadowlark-core-types = "0.3"
audio-graph = { git = "https://github.com/MeadowlarkDAW/audio-graph", rev = "39a347ca8b00b092139728129c089b472b93ea8a" }
clack-host = { git = "https://github.com/prokopyl/clack", rev = "31d247c00ddc228bc0a395c50f0738b3c91f409c" }
clack-extensions = { git = "https://github.com/prokopyl/clack", features = ["clack-host", "audio-ports", "log", "note-ports", "params", "state", "thread-check", "latency", "timer"], rev = "31d247c00ddc228bc0a395c50f0738b3c91f409c" }
dirs = { version = "4.0", optional = true }
basedrop = "0.1"
smallvec = { version = "1.9.0", features = ["const_generics", "union"] }
bitflags = "1.3"
rtrb = "0.2"
atomic_refcell = "0.1"
fnv = "1.0"
log = "0.4"
thread-priority = "0.9"
raw-window-handle = "0.4.2"
hierarchical_hash_wheel_timer = "1.1.0"
cpal = { version = "0.14", optional = true }
walkdir = { version = "2.3.2", optional = true }

[target.'cfg(windows)'.dependencies]
spin_sleep = "1.1"