[package]
name = "dropseed"
version = "0.0.0"
edition = "2021"
authors = ["Billy Messenger <BillyDM@tutamail.com>"]
license = "GPL-3.0"
keywords = ["audio", "graph", "daw", "plugin", "host"]
categories = ["multimedia::audio"]
description = "The DAW audio graph engine used in Meadowlark (placeholder)"
documentation = "https://docs.rs/dropseed"
repository = "https://github.com/MeadowlarkDAW/dropseed"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "core",
    "graph",
    "host",
    "examples/host-example"
]

[features]

[dependencies]