[package]
name = "dropseed-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
meadowlark-core-types = "0.3"
clack-host = { git = "https://github.com/prokopyl/clack", rev = "aad3643cbee1a611eb63fe8b9a5ea09103b0a77e" }
clack-extensions = { git = "https://github.com/prokopyl/clack", features = ["clack-host", "audio-ports", "gui", "log", "note-ports", "params", "state", "thread-check"], rev = "aad3643cbee1a611eb63fe8b9a5ea09103b0a77e" }
basedrop = "0.1"
smallvec = "1.7"
bitflags = "1.3"
atomic_refcell = "0.1"