[package]
name = "dropseed-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
meadowlark-core-types = "0.3"
clack-host = { git = "https://github.com/prokopyl/clack", rev = "604faffe1bd3e89f8327fe6dd5b293e2027027bc" }
clack-extensions = { git = "https://github.com/prokopyl/clack", features = ["clack-host", "audio-ports", "gui", "log", "note-ports", "params", "state", "thread-check"], rev = "604faffe1bd3e89f8327fe6dd5b293e2027027bc" }
basedrop = "0.1"
smallvec = "1.7"
bitflags = "1.3"
atomic_refcell = "0.1"