[package]
name = "dropseed_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap-sys = { git = "https://github.com/robbert-vdh/clap-sys.git", branch = "master" }
basedrop = "0.1"
log = "0.4"
bitflags = "2.3"