[package]
name = "dropseed-plugin-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clack-host = { git = "https://github.com/prokopyl/clack", rev = "43424685b7c0dd174fc7e9540a3903702cbda88d" }
clack-extensions = { git = "https://github.com/prokopyl/clack", features = ["clack-host", "audio-ports", "gui", "log", "note-ports", "params", "state", "thread-check", "latency", "timer"], rev = "43424685b7c0dd174fc7e9540a3903702cbda88d" }
basedrop = "0.1"
smallvec = "1.7"
bitflags = "1.3"
atomic_refcell = "0.1"
raw-window-handle = "0.4.2"