[package]
name = "dropseed-resource-loader"
version = "0.0.0"
edition = "2021"
authors = ["Billy Messenger <BillyDM@tutamail.com>"]
license = "GPL-3.0"
keywords = ["audio", "pcm"]
categories = ["multimedia::audio"]
documentation = "https://docs.rs/dropseed"
repository = "https://github.com/MeadowlarkDAW/dropseed"

[dependencies]
dropseed-core = { path = "../core" }
basedrop = "0.1"
meadowlark-core-types = "0.3"
fnv = "1.0"
log = "0.4"
samplerate-rs = { git = "https://github.com/MeadowlarkDAW/samplerate-rs.git", branch = "master" }
# TODO: Add two features: one to use the symphonia dependency, and one to use the non-open source formats with symphonia.
symphonia = { version = "0.5", features = ["flac", "mkv", "ogg", "pcm", "vorbis", "wav", "mp3", "aac", "alac"]}

