[package]
name = "basic-daw-example"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty-daw-engine = { path = "../../" }
rusty-daw-core = "0.9"
eframe = "0.18"
cpal = "0.13"
crossbeam = "0.8"
ringbuf = "0.2"
fnv = "1.0"
fast_log = "1.5.16"
log = "0.4"