[package]
name = "basic-daw-example"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dropseed = { path = "../../" }
meadowlark-core-types = "0.1"
#noise-generator-dropseed = { path = "../../../meadowlark-plugins/noise-generator/noise-generator-dropseed"}
noise-generator-dropseed = { git = "https://github.com/MeadowlarkDAW/meadowlark-plugins", package = "noise-generator-dropseed", branch = "main" }
eframe = "0.18"
cpal = "0.13"
crossbeam = "0.8"
ringbuf = "0.2"
fnv = "1.0"
fast_log = "1.5.16"
log = "0.4"
basedrop = "0.1"