[package]
name = "test-host"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
dropseed = { path = "../../" }
egui_glow = { version = "0.19", features = ["winit"] }
glutin = "0.29"
cpal = "0.13"
ringbuf = "0.2"
fnv = "1.0"
fern = { version = "0.6", features = ["colored"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"]}
log = "0.4"
basedrop = "0.1"
raw-window-handle = "0.4.3"