[package]
name = "dropseed-sample-browser-plug"
version = "0.0.0"
edition = "2021"
authors = ["Billy Messenger <BillyDM@tutamail.com>"]
license = "GPL-3.0"
keywords = ["audio", "plugins"]
categories = ["multimedia::audio"]
documentation = "https://docs.rs/dropseed"
repository = "https://github.com/MeadowlarkDAW/dropseed"

[dependencies]
basedrop = "0.1"
bincode = "1.3.3"
clack-host = { git = "https://github.com/prokopyl/clack", rev = "aad3643cbee1a611eb63fe8b9a5ea09103b0a77e" }
dropseed-core = { path = "../../core" }
dropseed-resource-loader = { path = "../../resource-loader" }
log = "0.4"
meadowlark-core-types = "0.3"
rtrb = "0.2"
serde = { version = "1.0", features = ["derive"] }
