[package]
name = "dropseed-sample-browser-plug"
version = "0.0.0"
edition = "2021"
authors = ["Billy Messenger <BillyDM@tutamail.com>"]
license = "GPL-3.0"
keywords = ["audio", "plugins"]
categories = ["multimedia::audio"]
documentation = "https://docs.rs/dropseed"
repository = "https://github.com/MeadowlarkDAW/dropseed"

[dependencies]
basedrop = "0.1"
bincode = "1.3.3"
clack-host = { git = "https://github.com/prokopyl/clack", rev = "d2c0f2e43b56e7037cb96729cebfb40fbc868c51" }
dropseed-core = { path = "../../core" }
dropseed-resource-loader = { path = "../../resource-loader" }
log = "0.4"
meadowlark-core-types = "0.3"
rtrb = "0.2"
serde = { version = "1.0", features = ["derive"] }
