[package]
name = "dropseed-sample-browser-plug"
version = "0.0.0"
edition = "2021"
authors = ["Billy Messenger <BillyDM@tutamail.com>"]
license = "GPL-3.0"
keywords = ["audio", "plugins"]
categories = ["multimedia::audio"]
documentation = "https://docs.rs/dropseed"
repository = "https://github.com/MeadowlarkDAW/dropseed"

[dependencies]
dropseed-core = { path = "../../core" }
meadowlark-core-types = "0.3"
clack-host = { git = "https://github.com/prokopyl/clack", rev = "d2c0f2e43b56e7037cb96729cebfb40fbc868c51" }
pcm-loader = { git = "https://github.com/MeadowlarkDAW/pcm-loader.git", branch = "main" }
basedrop = "0.1"
log = "0.4"
rtrb = "0.2"
